# cms-otek-backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: .env.example  settings.py  urls.py
customer/: admin.py  models.py  serializers.py  urls.py  views.py
customer/migrations/: 0001_initial.py
